--- a/deployments/nginx-deployment.yaml
+++ b/deployments/nginx-deployment.yaml
@@ -18,6 +18,7 @@ spec:
       creationTimestamp: null
       labels:
         app: nginx
+        type: front-end
     spec:
       containers:
       - image: nginx
