--- a/services/svc-nginx-clusterip.yaml
+++ b/services/svc-nginx-clusterip.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 80
   selector:
     app: nginx
