--- a/services/svc-nginxloadbalance.yaml
+++ b/services/svc-nginxloadbalance.yaml
@@ -4,6 +4,7 @@ metadata:
   name: nginx
   labels:
     name: nginx
+    type: front-end
 spec:
   type: LoadBalancer
   ports:
@@ -12,3 +13,4 @@ spec:
     targetPort: 80
   selector:
     app: nginx
+    type: front-end
