--- a/services/svc-nginx-np.yaml
+++ b/services/svc-nginx-np.yaml
@@ -8,7 +8,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     nodePort: 30080
     targetPort: 80
   selector:
