--- a/deployments/dash-deployment.yaml
+++ b/deployments/dash-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         type: front-end
     spec:
       containers:
-      - image: "huyhoang1996ha/my-dash:latest"
+      - image: "huyhoang1996ha/my-dash:0.0.5"
         name: dash
         resources: {}
         ports:
